Schalter/Drivers Totem/Setup_BK-C310(Normal)_EN V2.0/KIOSKDLL V1.17/KIOSKDLLDemo Souce/KIOSKDLLDEMO_VC/LoadDLL.h

typedef int ( __stdcall * KIOSK_BarcodeSetPDF417)(HANDLE hPort,
												int nPortType,
												char * pszBuffer,
												int nBytesOfBuffer,
												int nWidth, 
												int nHeight,
												int nColumns,
												int nLines,
												int nScaleH,
												int nScaleV,
												int nCorrectGrade );
typedef  int (__stdcall * KIOSK_SetChineseFont)(HANDLE hPort,
												int nPortType,
												char * pszBuffer,
												int nEnable,
												int nBigger,
												int nLSpacing,
												int nRSpacing,
												int nUnderLine );
typedef int ( __stdcall * KIOSK_SetPresenter)(	HANDLE hPort, int nPortType, int nMode, int nTime);
typedef int (__stdcall * KIOSK_SetBundler)( HANDLE hPort, int nPortType, int nMode, int nTime );
typedef int( __stdcall * KIOSK_SetBundlerInfo )( HANDLE hPort,int nPortType,int nMode );
typedef int( __stdcall * KIOSK_RTQueryStatus_T)(HANDLE hPort, int nPortType, char * pszStatus);
typedef int( __stdcall * KIOSK_QueryASB_T)( HANDLE hPort, int nPortType, int Enable);
typedef int( __stdcall * KIOSK_QueryStatus_T)(HANDLE hPort, int nPortType, char * pszStatus, int nTimeouts);