Drivers Totem/Setup_BK-C310(Normal)_EN V2.0/KIOSKDLL V1.17/KIOSKDLLDemo Souce/KIOSKDLLDEMO_DELPHI/LoadDLL.pas


  //Set the 417 bar code.
  function KIOSK_BarcodeSetPDF417( hPort: integer; nPortType: integer; pszBuffer: pchar; nBytesOfBuffer: integer; nWidth: integer; nHeight: integer; nLines: integer; nColumns: integer; nScaleH: integer; nScaleV: integer; nCorrectGrade: integer ): Integer; stdcall; external 'KIOSKDLL.dll';

  //Set the chinese font.
  function KIOSK_SetChineseFont( hPort: integer; nPortType: integer; pszBuffer: pchar; nEnablehPort: integer; nBigger: integer; nLSpacing: integer; nRSpacing: integer; nUnderLine: integer ): Integer; stdcall; external 'KIOSKDLL.dll';

  //Set the presenter.
  function KIOSK_SetPresenter( hPort: integer; nPortType: integer; nMode: integer; nTime: integer ): Integer; stdcall; external 'KIOSKDLL.dll';

  //Set the bundler.
  function KIOSK_SetBundler( hPort: integer; nPortType: integer; nMode: integer; nTime: integer ): Integer; stdcall; external 'KIOSKDLL.dll';

  //Set the action of bundler.
  function KIOSK_SetBundlerInfo( hPort: integer; nPortType: integer; nMode: integer ): Integer; stdcall; external 'KIOSKDLL.dll';

  //Query the status of printer.
  function KIOSK_QueryStatus_T( hPort: integer; nPortType: integer; pszStatus: pchar; nTimeouts: integer ): Integer; stdcall; external 'KIOSKDLL.dll';

  //Query the real-time status of printer.
  function KIOSK_RTQueryStatus_T( hPort: integer; nPortType: integer ; pszStatus: pchar ): Integer; stdcall; external 'KIOSKDLL.dll';

  //Automatic Status Back.
  function KIOSK_QueryASB_T( hPort: integer; nPortType: integer; Enable: integer ): Integer; stdcall; external 'KIOSKDLL.dll';


  //The return value of function.
  const  KIOSK_SUCCESS                     = 1001; //All is ok
  const  KIOSK_FAIL                        = 1002; //There is error.
  const  KIOSK_ERROR_INVALID_HANDLE        = 1101; //The handle is not good.
  const  KIOSK_ERROR_INVALID_PARAMETER     = 1102; //The parameter is error.
  const  KIOSK_ERROR_INVALID_PATH          = 1201; //The path is error.
  const  KIOSK_ERROR_NOT_BITMAP            = 1202; //This is not bitmap.
  const  KIOSK_ERROR_NOT_MONO_BITMAP       = 1203; //The bitmap is not self-colored.
  const  KIOSK_ERROR_BEYOND_AREA           = 1204; //The bitmap is too big.
  const  KIOSK_ERROR_FILE                  = 1301; //Error of file.

  //Stop options of serial port
  const  KIOSK_COM_ONESTOPBIT              = $0;
  const  KIOSK_COM_TWOSTOPBITS             = $1;

  //Parity options of serial port
  const  KIOSK_COM_NOPARITY                = $0;
  const  KIOSK_COM_ODDPARITY               = $1;
  const  KIOSK_COM_EVENPARITY              = $2;
  const  KIOSK_COM_MARKPARITY              = $3;
  const  KIOSK_COM_SPACEPARITY             = $4;

  //Flow control options of serial port
  const  KIOSK_COM_DTR_DSR                 = $0;
  const  KIOSK_COM_RTS_CTS                 = $1;
  const  KIOSK_COM_XON_XOFF                = $2;
  const  KIOSK_COM_NO_HANDSHAKE            = $3;

  // Print mode options
  const  KIOSK_PRINT_MODE_STANDARD         = $0;
  const  KIOSK_PRINT_MODE_PAGE             = $1;

  //Paper mode options
  const  KIOSK_PAPER_SERIAL                = $0;
  const  KIOSK_PAPER_SIGN                  = $1;

  // Font type options
  const  KIOSK_FONT_TYPE_STANDARD          = $0;
  const  KIOSK_FONT_TYPE_COMPRESSED        = $1;
  const  KIOSK_FONT_TYPE_UDC               = $2;
  const  KIOSK_FONT_TYPE_CHINESE           = 43;

  // Font style options
  const  KIOSK_FONT_STYLE_NORMAL           = $0;
  const  KIOSK_FONT_STYLE_BOLD             = $8;
  const  KIOSK_FONT_STYLE_THIN_UNDERLINE   = $80;
  const  KIOSK_FONT_STYLE_THICK_UNDERLINE  = $100;
  const  KIOSK_FONT_STYLE_UPSIDEDOWN       = $200;
  const  KIOSK_FONT_STYLE_REVERSE          = $400;
  const  KIOSK_FONT_STYLE_CLOCKWISE_90     = $1000;

  // Mode options of bit-image -- for download and print
  const  KIOSK_BITMAP_MODE_8SINGLE_DENSITY  = $0;
  const  KIOSK_BITMAP_MODE_8DOUBLE_DENSITY  = $1;
  const  KIOSK_BITMAP_MODE_24SINGLE_DENSITY = $20;
  const  KIOSK_BITMAP_MODE_24DOUBLE_DENSITY = $21;
  
  // Mode options of printing bit image in RAM or Flash
  const  KIOSK_BITMAP_PRINT_NORMAL          = $0;
  const  KIOSK_BITMAP_PRINT_DOUBLE_WIDTH    = $1;
  const  KIOSK_BITMAP_PRINT_DOUBLE_HEIGHT   = $2;
  const  KIOSK_BITMAP_PRINT_QUADRUPLE       = $3;

  // Barcode's type
  const  KIOSK_BARCODE_TYPE_UPC_A           = $41;
  const  KIOSK_BARCODE_TYPE_UPC_E           = $42;
  const  KIOSK_BARCODE_TYPE_JAN13           = $43;
  const  KIOSK_BARCODE_TYPE_JAN8            = $44;
  const  KIOSK_BARCODE_TYPE_CODE39          = $45;
  const  KIOSK_BARCODE_TYPE_ITF             = $46;
  const  KIOSK_BARCODE_TYPE_CODEBAR         = $47;
  const  KIOSK_BARCODE_TYPE_CODE93          = $48;
  const  KIOSK_BARCODE_TYPE_CODE128         = $49;

  // Barcode HRI's position
  const  KIOSK_HRI_POSITION_NONE            = $0;
  const  KIOSK_HRI_POSITION_ABOVE           = $1;
  const  KIOSK_HRI_POSITION_BELOW           = $2;
  const  KIOSK_HRI_POSITION_BOTH            = $3;

  // Specify the area direction of paper 
  const  KIOSK_AREA_LEFT_TO_RIGHT           = $0;
  const  KIOSK_AREA_BOTTOM_TO_TOP           = $1;
  const  KIOSK_AREA_RIGHT_TO_LEFT           = $2;
  const  KIOSK_AREA_TOP_TO_BOTTOM           = $3;

  // Presenter mode options
  const  KIOSK_PRESENTER_Retraction_on      = $0;
  const  KIOSK_PRESENTER_Paper_Forward      = $1;
  const  KIOSK_PRESENTER_Paper_Hold         = $2;
  const  KIOSK_PRESENTER_Close              = $3;

  // Bundler mode options
  const  KIOSK_BUNDLER_Retract              = $0;
  const  KIOSK_BUNDLER_Present              = $1;
implementation

end.
